pgrx-tests/tests/ui/total_eq_for_postgres_eq.stderr
error[E0277]: the trait bound `BrokenType: std::cmp::Eq` is not satisfied
 --> tests/ui/total_eq_for_postgres_eq.rs:5:12
  |
5 | pub struct BrokenType {
  |            ^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `BrokenType`
  |
note: required by a bound in `PostgresEqRequiresTotalEq`
 --> $WORKSPACE/pgrx/src/deriving.rs
  |
  | pub trait PostgresEqRequiresTotalEq: Eq {}
  |                                      ^^ required by this bound in `PostgresEqRequiresTotalEq`
help: consider annotating `BrokenType` with `#[derive(Eq)]`
  |
5 + #[derive(Eq)]
6 | pub struct BrokenType {
  |
